--- a/src/lib/styles/chapter-styles.scss
+++ b/src/lib/styles/chapter-styles.scss
@@ -69,7 +69,7 @@
 .chapter {
   display: grid;
   grid-template-columns: 1fr;
-  max-width: 1200px;
+  max-width: var(--max-content-width);
   margin: 0 auto;
 
   @media (max-width: variables.$breakpoint-lg) {
